# retention-analysis-system

./: .gitignore  README.md  db.sqlite3-journal  pyproject.toml
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_rename_pltaform_video_plataform.py  0003_alter_video_options_rename_plataform_video_platform_and_more.py
core/templates/core/: upload.html
setup/: settings.py  urls.py
