[project]
name = "tcc-analise-retencao"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor Mondardo",email = "105084750+vitormondardo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
